# Ralph-UI

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CLOUDFLARE-DEPLOY.md  CONTRIBUTING.md  FRAMEWORK_DECISION.md  IMPLEMENTATION_PLAN.md  LAUNCH-CHECKLIST.md  PHASE1-GUIDE.md  PHASE2_COMPLETION.md  PHASE2_FINAL_COMPLETION.md  PHASE2_REVIEW.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  PHASE7_TESTING_COMPLETE.md  PHASES_COMPLETION.md  PHASE_7.5_AI_PRD_CREATION.md  PHASE_7.5_COMPLETION.md  PHASE_7.5_ENHANCEMENT_EXECUTION_FLOW.md  PHASE_7.5_IMPLEMENTATION_STATUS.md  PHASE_7.5_TEST_RESULTS.md  PRD-GSD-STYLE-PRD-GENERATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SECURITY.md  SUMMARY.md  agents.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  social-posts.md  tsconfig.json  vite.config.ts  vitest.config.ts
server/: Cargo.toml  Cross.toml  ralph-ui.db
server/src/: events.rs  lib.rs  main.rs  shutdown.rs
server/src/agents/: ansi_stripper.rs  config.rs  log_collector.rs  manager.rs  mod.rs  models.rs  output_parser.rs  path_resolver.rs  rate_limiter.rs  trace_parser.rs
server/src/agents/format_parsers/: claude.rs  generic.rs  mod.rs  opencode.rs
server/src/agents/providers/: claude_provider.rs  codex_provider.rs  cursor_provider.rs  droid_provider.rs  gemini_provider.rs  mod.rs  opencode_provider.rs  qwen_provider.rs
server/src/commands/: agents.rs  chat_commands.rs  config.rs  context.rs  context_chat.rs  git.rs  github.rs  gsd.rs  mission_control.rs  mod.rs  models.rs  prd.rs  prd_workflow.rs  projects.rs  providers.rs  push.rs  ralph_loop.rs  recovery.rs  sessions.rs  tasks.rs  templates.rs  terminal.rs  traces.rs
server/src/commands/prd_chat/: agent_executor.rs  analysis.rs  extraction.rs  file_watch.rs  messaging.rs  mod.rs  quality.rs  session.rs  types.rs
server/src/commands/ralph_loop/: assignments.rs  brief.rs  config.rs  execution.rs  helpers.rs  iterations.rs  learnings.rs  mod.rs  notifications.rs  prd_ops.rs  progress.rs  story_ops.rs  tests.rs  worktrees.rs
server/src/commands/ultra_research/: agent_spawner.rs  discussion.rs  mod.rs  orchestrator.rs  prompts.rs  synthesizer.rs
server/src/config/: loader.rs  merger.rs  mod.rs  providers.rs  secrets.rs
server/src/file_storage/: agents.rs  attachments.rs  chat.rs  chat_command_ops.rs  chat_ops.rs  context_ops.rs  index.rs  iterations.rs  mod.rs  projects.rs  research_ops.rs  sessions.rs
server/src/git/: ai_resolver.rs  branches.rs  commits.rs  manager.rs  merge.rs  mod.rs  status.rs  tests.rs  types.rs  worktrees.rs
server/src/github/: issue_converter.rs  mod.rs
server/src/gsd/: config.rs  mod.rs  planning_storage.rs  requirements.rs  roadmap.rs  startup.rs  state.rs  tests.rs  verification.rs
server/src/gsd/research/: mod.rs  orchestrator.rs  prompts.rs  synthesizer.rs
server/src/models/: chat_commands.rs  context.rs  mod.rs  prd_chat.rs  state_machine.rs  ultra_research.rs
server/src/parsers/: json.rs  markdown.rs  mod.rs  structured_output.rs  types.rs  yaml.rs
server/src/prd_workflow/: dependency.rs  mod.rs  research.rs  state.rs  storage.rs  tests.rs
server/src/push/: mod.rs  notifier.rs  storage.rs  types.rs  vapid.rs
server/src/ralph_loop/: assignments_manager.rs  brief_builder.rs  competitive_manager.rs  completion.rs  config.rs  fallback_orchestrator.rs  hierarchical_team_manager.rs  learnings_manager.rs  merge_coordinator.rs  merge_manager.rs  mod.rs  parallel_orchestrator.rs  prd_executor.rs  progress_tracker.rs  prompt_builder.rs  retry.rs  types.rs  worktree_pool.rs
server/src/server/: auth.rs  events.rs  file_watcher.rs  mod.rs  proxy.rs  pty.rs  pty_registry.rs  state.rs  static_files.rs
server/src/server/routes/: agent_routes.rs  chat_command_routes.rs  config_routes.rs  context_routes.rs  git_routes.rs  gsd_routes.rs  mod.rs  parallel_routes.rs  (+5 more)
server/src/session/: lock.rs  progress.rs  recovery.rs
server/src/templates/: builtin.rs  engine.rs  mod.rs  resolver.rs
server/src/utils/: mod.rs
server/src/watchers/: mod.rs  prd_file_watcher.rs
server/tests/: parser_tests.rs  streaming_integration_tests.rs
src-tauri/: Cargo.toml  ralph-ui.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  session_files.rs  shutdown.rs
src-tauri/src/agents/: ansi_stripper.rs  fallback.rs  manager.rs  mod.rs  model_cache.rs  models.rs  path_resolver.rs  plugin.rs  rate_limiter.rs  registry.rs  trace_parser.rs
src-tauri/src/commands/: agents.rs  auto_merge.rs  config.rs  git.rs  github.rs  gsd.rs  mission_control.rs  mod.rs  models.rs  parallel.rs  prd.rs  prd_chat.rs  projects.rs  ralph_loop.rs  recovery.rs  sessions.rs  tasks.rs  templates.rs  traces.rs
src-tauri/src/config/: loader.rs  merger.rs  mod.rs
src-tauri/src/database/: agents.rs  mod.rs  prd.rs  prd_chat.rs  projects.rs  ralph_iterations.rs  sessions.rs  tasks.rs
src-tauri/src/file_storage/: attachments.rs  chat.rs  chat_ops.rs  index.rs  iterations.rs  mod.rs  projects.rs
src-tauri/src/git/: ai_resolver.rs  mod.rs
src-tauri/src/github/: issue_converter.rs  mod.rs
src-tauri/src/gsd/: config.rs  conversion.rs  mod.rs  planning_storage.rs  requirements.rs  tests.rs  verification.rs
src-tauri/src/models/: mod.rs  prd_chat.rs
src-tauri/src/parallel/: conflicts.rs  coordinator.rs  mod.rs  pool.rs  scheduler.rs
src-tauri/src/parsers/: json.rs  markdown.rs  mod.rs  structured_output.rs  types.rs  yaml.rs
src-tauri/src/plugins/: mod.rs  registry.rs
src-tauri/src/ralph_loop/: completion.rs  config.rs  fallback_orchestrator.rs  mod.rs  prd_executor.rs  progress_tracker.rs  prompt_builder.rs  retry.rs  types.rs
src-tauri/src/server/: auth.rs  events.rs  mod.rs  proxy.rs  pty.rs  state.rs
src-tauri/src/session/: lock.rs  mod.rs  progress.rs  recovery.rs
src-tauri/src/templates/: engine.rs  mod.rs  resolver.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/watchers/: prd_file_watcher.rs
src-tauri/tests/: plugin_registry_tests.rs  streaming_integration_tests.rs
(+474 files in other folders)
