[package]
name = "ralph-ui"
version = "0.2.4"
description = "HTTP/WebSocket server for Ralph Wiggum Loop autonomous AI agent system"
authors = ["Ralph UI Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dario-valles/Ralph-UI"
homepage = "https://github.com/dario-valles/Ralph-UI"
keywords = ["ai", "autonomous-agents", "claude", "developer-tools", "llm"]
categories = ["development-tools", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ralph_ui_lib"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Git operations (vendored-openssl for cross-compilation support)
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# YAML parsing
serde_yaml = "0.9"

# Markdown parsing
pulldown-cmark = "0.12"

# Regex for parsing
regex = "1"

# HTTP client for GitHub API (rustls for cross-compilation without OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# System resource monitoring
sysinfo = "0.32"

# Template engine
tera = "1.19"

# Home directory resolution
dirs = "5.0"

# Executable path resolution
which = "6.0"

# TOML config parsing
toml = "0.8"

# File system watching
notify = "6.1"

# File locking for concurrent access safety
fs2 = "0.4"

# Directory traversal for source file detection
walkdir = "2"

# HTTP server (Axum)
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Terminal PTY support
portable-pty = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22.1"

# Static file embedding for single-binary distribution
rust-embed = "8.5"
mime_guess = "2.0"

# Web Push notifications
web-push = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }

# Signal handling for graceful shutdown
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.8"

