[package]
name = "ralph-ui"
version = "0.1.0"
description = "Cross-platform desktop and mobile UI for Ralph Wiggum Loop autonomous AI agent system"
authors = ["Ralph UI Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ralph_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Git operations
git2 = "0.19"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# YAML parsing
serde_yaml = "0.9"

# Markdown parsing
pulldown-cmark = "0.12"

# Regex for parsing
regex = "1"

# HTTP client for GitHub API
reqwest = { version = "0.12", features = ["json"] }

# System resource monitoring
sysinfo = "0.32"

# Template engine
tera = "1.19"

# Home directory resolution
dirs = "5.0"

# TOML config parsing
toml = "0.8"

# File system watching
notify = "6.1"

# Signal handling for graceful shutdown
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.8"

